# advent-of-code-2023-rust

./: .gitignore  Cargo.toml  README.md  x.ps1  x.py
.github/workflows/: ci.yml  readme-stars.yml
src/: helper.rs  lib.rs  main.rs  template.txt
src/helper/: array_2d.rs  carte.rs  cycle.rs  iterator.rs  loop_detector.rs
src/template/: aoc_cli.rs  day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/commands/: all.rs  scaffold.rs  time.rs
