[package]
name = "advent_of_code"
version = "0.9.1"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
glam = "0.24.2"
itertools = "0.12.0"
num = "0.4.1"
pico-args = "0.5.0"
regex = "1.10.2"
tinyjson = "2.5.1"

[lints.clippy]
unnecessary_cast = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
